# TurboQuantNemo

./: .gitignore  CLAUDE.md  KIMI_MLA_HANDOVER.txt  README.md  requirements-benchmark.txt
.github/workflows/: mlx-lm-offload-ci.yml
artifacts/: PHASE0_1_COMPLETION_STATUS.md
artifacts/ablation/: bench_gemma4-layer-aware_noffload_default_20260416_232126.json  bench_gemma4-layer-aware_noffload_isoquant_20260416_230320.json  bench_gemma4-layer-aware_noffload_isoquant_20260416_232126.json  bench_gemma4-layer-aware_offload_default_20260416_232126.json  bench_gemma4-layer-aware_offload_isoquant_20260416_232126.json  qg_gemma4-layer-aware_noffload_default_20260416_232126.json  qg_gemma4-layer-aware_noffload_isoquant_20260416_232126.json  qg_gemma4-layer-aware_offload_default_20260416_232126.json  (+1 more)
artifacts/branch_c_profiling/: ablation_combined.json  (+12 more)
docs/: AGENT_MEMORY_EVAL.md  BENCHMARK_COMPARISON.md  BUILD_PHASES.md  DKV_KERNEL_SPEC.md  EXECUTION_BOARD.md  FROM_ATTENTION_TO_CONSUMER_HARDWARE.md  GEMMA4_FULL_STACK.md  KIMI_K26_FULL_STACK.md  LAYER_AWARE_QUANT.md  MOE_PATHWAY_HUMAN_GATES.md  NEMOTRON_PATHWAY_32GB.md  ORIGIN_ATTRIBUTION_AND_MATH.md  PATHWAY_PROVEN_CHECKLIST.md  PHASE5_DECISION_2026-04-27.md  PRODUCTION_ROADMAP.md  QWEN36_MIXED_PRECISION_RESULTS.md  QWEN3_FULL_STACK.md  RELEASE_CANDIDATE_CHECKLIST.md  REMAINING_PLAN_TODOS.md  RotaryQuant_paper.md  SOAK_TESTING.md  TURBOQUANT_CHANGELOG.md  cursor-mcp-config.md  e2e-session-memory.js  e2e-test.md  gpu-profiling-protocol.md  start-llama-server.md
fast-session-memory-mcp/: package-lock.json  package.json
mlx-lm/: MANIFEST.in  TURBOQUANT.md  conversion_log.txt  pytest.ini  setup.py
mlx-lm/mlx_lm/models/native/: CMakeLists.txt  isoquant_kv_benchmark.cpp  isoquant_kv_kernels.metal  isoquant_kv_reference.cpp  isoquant_kv_reference.hpp  isoquant_kv_runtime.cpp  isoquant_kv_runtime.hpp  isoquant_kv_test.cpp  metal_device_probe.cpp
mojo-bench/: README.md  pixi.toml
qwen-coder-mcp/: README-mlx.md  package-lock.json  package.json  serve-qwen-mlx.sh  tsconfig.json
results/: ISOQUANT_METAL_STATUS.md  QWEN3_KV_RECONSTRUCTION_FIX.md  deferred_prefill_validation.json  gemma4_capped16gb_default_quality.json  gemma4_capped16gb_isoquant_quality.json  gemma4_capped16gb_isoquant_v3_quality.json  gemma4_code_task_clique.json  gemma4_dedekimi_observer.jsonl  gemma4_dedekimi_summary.json  gemma4_dedekimi_validated.json  gemma4_dedekimi_validated.jsonl  gemma4_default_500tok_quality.json  gemma4_default_500tok_v2_quality.json  gemma4_fullstack_isoquant_500tok_memory.json  gemma4_fullstack_isoquant_500tok_quality.json  gemma4_fullstack_isoquant_memory.json  gemma4_fullstack_isoquant_quality.json  gemma4_fullstack_turboquant_memory.json  gemma4_fullstack_turboquant_quality.json  gemma4_isoquant_500tok_quality.json  gemma4_isoquant_500tok_v2_quality.json  gemma4_isoquant_profileA_memory.json  gemma4_kv_depth_curve.json  gemma4_kv_fidelity.json  gemma4_kv_throughput_matrix.json  gemma4_layer_aware_abc_default_quality.json  gemma4_layer_aware_abc_turboquant_quality.json  gemma4_layer_aware_bench_default_profileA.json  gemma4_layer_aware_benchmark.json  gemma4_layer_aware_kv_fidelity.json  gemma4_layer_aware_quality.json  gemma4_memory_capped_16gb.json  gemma4_no_predictor_benchmark.json  gemma4_offload_default_quality.json  gemma4_pathway_benchmark.json  gemma4_pathway_quality.json  gemma4_predictor_500tok_quality.json  gemma4_predictor_ab_comparison.json  gemma4_predictor_ablation.json  gemma4_predictor_default_memory.json  (+101 more)
scripts/: ab_kimi_layered_stack.py  ab_kimi_predictor.py  agent_memory_coding_eval.py  bandwidth_budget.py  bench_kimi_mla_attention_only.py  bench_npt8_tiled_vs_v1.py  benchmark_mlx_kernels.py  benchmark_moe_offload.py  benchmark_nvfp4_isoquant.py  calibrate_kimi_cliques.py  check_kimi_disk_prereq.sh  checkpoint_integrity.py  compare_mojo_vs_mlx.py  compare_pathway_kv_modes.py  convert_kimi_2bit_chunked.py  decode_profiler.py  delegate-to-gemini.sh  delegate-to-ollama.sh  eval_kimi_quality.py  eval_ollama_baseline.py  eval_quality_gate.py  instrument_bandwidth_iso.py  instrument_isoquant_decode.py  invariance_check.py  load_test_concurrent.py  long_context_kv_eval.py  measure_kv_fidelity.py  microprofile_prepare_gather.py  moe_stress_tests.py  phase0_matrix_cv_summary.py  phase0_variance_check.py  ppl_32k_isoquant_vs_default.py  profile_ablation.py  profile_kimi_expert_dispatch.py  profile_kimi_k26_decode.py  profile_kimi_k26_fused_ab.py  profile_kimi_speculative.py  profile_metal_counters.py  profile_npt8_metal.py  quantize_kimi_2bit.sh  (+35 more)
tests/: test_invariance_check.py
turboquant-mlx/: README.md  __init__.py  benchmark_perf.py  codebook_precompute.py  empirical_codebooks.py  mlx_turboquant.py  test_mlx_turboquant.py  test_reconstruct.py  test_rust_packing.py  validate_real_kv.py  validate_utils.py
(+312 files in other folders)
